// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`contactData is falsy 1`] = `""`;

exports[`contactData.address is falsy 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-start-start extra_padding"
>
  <div
    className="flex-100 layout-row layout-align-start-stretch username_title"
  >
    <span
      className="layout-row flex-none layout-align-start-center card_padding_right"
    >
      <i
        className="fa fa-user clip bigProfile"
        style={
          Object {
            "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
          }
        }
      />
    </span>
    <div
      className="layout-align-start-center layout-row flex-70"
    >
      <h1
        className="flex-none layout-row cli"
      >
        FOO_FIRST_NAME
         
        FOO_LAST_NAME
      </h1>
    </div>
  </div>
  <div
    className="layout-row flex-100 layout-wrap layout-align-start-center margin_bottom"
  >
    <GreyBox
      borderStyle=""
      content={
        <div
          className="layout-row flex-100"
        >
          <UntranslatedProfileBox
            edit={[Function]}
            style={
              Object {
                "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
              }
            }
            t={[Function]}
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
            user={
              Object {
                "company_name": "FOO_COMPANY_NAME",
                "email": "FOO_EMAIL@mehr.de",
                "first_name": "FOO_FIRST_NAME",
                "last_name": "FOO_LAST_NAME",
                "primary": 2,
              }
            }
          />
        </div>
      }
      contentClassName="layout-row flex"
      flex={0}
      flexGtLg={0}
      flexMd={0}
      fullWidth={false}
      isBox={false}
      onClick={null}
      padding={false}
      style={Object {}}
      title=""
      titleAction={false}
      wrapperClassName="flex-gt-sm-66 flex-100 layout-row layout-align-start-center "
    />
  </div>
  <div
    className="layout-row flex-100 layout-wrap layout-align-start-center"
  >
    <AdminSearchableShipments
      dispatches={
        Object {
          "getContact": [Function],
          "goBack": [Function],
        }
      }
      handleClick={null}
      hubs={
        Array [
          Object {
            "address": Object {
              "city": "FOO_ADDRESS_CITY",
              "country": "FOO_ADDRESS_COUNTRY",
              "geocodedAddress": "FOO_GEOCODED_ADDRESS",
              "id": 246,
              "primary": true,
              "street": "FOO_ADDRESS_STREET",
              "streetNumber": "FOO_ADDRESS_STREET_NUMBER",
              "user": Object {
                "primary": true,
              },
              "zipCode": "FOO_ADDRESS_ZIP_CODE",
            },
            "country": "DE",
            "locode": "DEHAM",
            "name": "FOO_HUB_NAME",
            "nexusName": "Hamburg",
          },
        ]
      }
      limit={5}
      seeAll={false}
      shipments={
        Array [
          Object {
            "booking_placed_at": "2018-11-01T11:14:33z",
            "cargo_count": 2,
            "cargo_items_attributes": Array [],
            "cargo_notes": "SHIPMENT_CARGO_NOTES",
            "cargo_units": Array [
              Object {
                "height": 67,
                "length": 63,
                "quantity": 2,
                "width": 107,
              },
            ],
            "clientName": "FOO_FIRST_NAME FOO_LAST_NAME",
            "companyName": "FOO_COMPANY_NAME",
            "containers_attributes": Array [],
            "delivery_address": "SHIPMENT_DELIVERY_ADDRESS",
            "destination": Object {
              "fullAddress": "SHIPMENT_DESTINATION_FULL_ADDRESS",
            },
            "destination_hub": Object {
              "name": "SHIPMENT_DESTINATION_HUB",
              "startHub": Object {
                "address": Object {},
              },
            },
            "direction": "import",
            "eori": 1234,
            "has_on_carriage": false,
            "has_pre_carriage": false,
            "id": 654,
            "imc_reference": "SHIPMENT_IMC_REFERENCE",
            "incoterm": "SHIPMENT_INCOTERM",
            "incoterm_text": "SHIPMENT_INCOTERM_TEXT",
            "load_type": "cargo_item",
            "notes": "SHIPMENT_NOTES",
            "origin": Object {
              "fullAddress": "SHIPMENT_ORIGIN_FULL_ADDRESS",
            },
            "origin_hub": Object {
              "name": "SHIPMENT_ORIGIN_HUB",
              "startHub": Object {
                "address": Object {
                  "city": "FOO_ADDRESS_CITY",
                  "country": "FOO_ADDRESS_COUNTRY",
                  "geocodedAddress": "FOO_GEOCODED_ADDRESS",
                  "id": 246,
                  "primary": true,
                  "street": "FOO_ADDRESS_STREET",
                  "streetNumber": "FOO_ADDRESS_STREET_NUMBER",
                  "user": Object {
                    "primary": true,
                  },
                  "zipCode": "FOO_ADDRESS_ZIP_CODE",
                },
              },
            },
            "pickup_address": "SHIPMENT_PICKUP_ADDRESS",
            "planned_eta": "2018-12-01T18:14:33z",
            "planned_etd": "2018-11-12T12:37:08z",
            "planned_origin_drop_off_date": "2018-12-01T22:14:33z",
            "planned_pickup_date": "2018-12-08T04:30:08z",
            "schedule_set": Array [
              Object {
                "hub_route_key": "SHIPMENT_SCHEDULE_SET_HUB_ROUTE_KEY",
              },
            ],
            "schedules_charges": Object {
              "AIR_HUB_ROUTE_KEY": Object {
                "total": 200,
              },
              "OCEAN_HUB_ROUTE_KEY": Object {
                "total": 40,
              },
              "RAIL_HUB_ROUTE_KEY": Object {
                "total": 125,
              },
              "TRUCK_HUB_ROUTE_KEY": Object {
                "total": 75,
              },
            },
            "selected_offer": Object {
              "cargo": Object {},
              "customs": Object {
                "hasUnknown": false,
                "val": 12,
              },
              "insurance": Object {
                "val": 5,
              },
              "total": Object {
                "value": 87,
              },
            },
            "service_level": "standard",
            "status": "finished",
            "total_goods_value": Object {
              "currency": "USD",
              "value": 150000,
            },
            "total_price": Object {
              "currency": "USD",
              "value": 137550,
            },
            "trucking": Object {
              "has_on_carriage": false,
              "has_pre_carriage": false,
              "on_carriage": Object {
                "trucking_time_in_seconds": 28,
              },
              "pre_carriage": Object {
                "trucking_time_in_seconds": 55,
              },
            },
            "updated_at": "2018-11-01T18:14:33z",
          },
        ]
      }
      t={[Function]}
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
      title="Related Shipments"
      userView={true}
    />
  </div>
</div>
`;

exports[`shallow render 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-start-start extra_padding"
>
  <div
    className="flex-100 layout-row layout-align-start-stretch username_title"
  >
    <span
      className="layout-row flex-none layout-align-start-center card_padding_right"
    >
      <i
        className="fa fa-user clip bigProfile"
        style={
          Object {
            "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
          }
        }
      />
    </span>
    <div
      className="layout-align-start-center layout-row flex-70"
    >
      <h1
        className="flex-none layout-row cli"
      >
        FOO_FIRST_NAME
         
        FOO_LAST_NAME
      </h1>
    </div>
  </div>
  <div
    className="layout-row flex-100 layout-wrap layout-align-start-center margin_bottom"
  >
    <GreyBox
      borderStyle=""
      content={
        <div
          className="layout-row flex-100"
        >
          <UntranslatedProfileBox
            edit={[Function]}
            style={
              Object {
                "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
              }
            }
            t={[Function]}
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
            user={
              Object {
                "company_name": "FOO_COMPANY_NAME",
                "email": "FOO_EMAIL@mehr.de",
                "first_name": "FOO_FIRST_NAME",
                "last_name": "FOO_LAST_NAME",
                "primary": 2,
              }
            }
          />
        </div>
      }
      contentClassName="layout-row flex"
      flex={0}
      flexGtLg={0}
      flexMd={0}
      fullWidth={false}
      isBox={false}
      onClick={null}
      padding={false}
      style={Object {}}
      title=""
      titleAction={false}
      wrapperClassName="flex-gt-sm-66 flex-100 layout-row layout-align-start-center "
    />
  </div>
  <div
    className="layout-row flex-100 layout-wrap layout-align-start-center"
  >
    <AdminSearchableShipments
      dispatches={
        Object {
          "getContact": [Function],
          "goBack": [Function],
        }
      }
      handleClick={null}
      hubs={
        Array [
          Object {
            "address": Object {
              "city": "FOO_ADDRESS_CITY",
              "country": "FOO_ADDRESS_COUNTRY",
              "geocodedAddress": "FOO_GEOCODED_ADDRESS",
              "id": 246,
              "primary": true,
              "street": "FOO_ADDRESS_STREET",
              "streetNumber": "FOO_ADDRESS_STREET_NUMBER",
              "user": Object {
                "primary": true,
              },
              "zipCode": "FOO_ADDRESS_ZIP_CODE",
            },
            "country": "DE",
            "locode": "DEHAM",
            "name": "FOO_HUB_NAME",
            "nexusName": "Hamburg",
          },
        ]
      }
      limit={5}
      seeAll={false}
      shipments={
        Array [
          Object {
            "booking_placed_at": "2018-11-01T11:14:33z",
            "cargo_count": 2,
            "cargo_items_attributes": Array [],
            "cargo_notes": "SHIPMENT_CARGO_NOTES",
            "cargo_units": Array [
              Object {
                "height": 67,
                "length": 63,
                "quantity": 2,
                "width": 107,
              },
            ],
            "clientName": "FOO_FIRST_NAME FOO_LAST_NAME",
            "companyName": "FOO_COMPANY_NAME",
            "containers_attributes": Array [],
            "delivery_address": "SHIPMENT_DELIVERY_ADDRESS",
            "destination": Object {
              "fullAddress": "SHIPMENT_DESTINATION_FULL_ADDRESS",
            },
            "destination_hub": Object {
              "name": "SHIPMENT_DESTINATION_HUB",
              "startHub": Object {
                "address": Object {},
              },
            },
            "direction": "import",
            "eori": 1234,
            "has_on_carriage": false,
            "has_pre_carriage": false,
            "id": 654,
            "imc_reference": "SHIPMENT_IMC_REFERENCE",
            "incoterm": "SHIPMENT_INCOTERM",
            "incoterm_text": "SHIPMENT_INCOTERM_TEXT",
            "load_type": "cargo_item",
            "notes": "SHIPMENT_NOTES",
            "origin": Object {
              "fullAddress": "SHIPMENT_ORIGIN_FULL_ADDRESS",
            },
            "origin_hub": Object {
              "name": "SHIPMENT_ORIGIN_HUB",
              "startHub": Object {
                "address": Object {
                  "city": "FOO_ADDRESS_CITY",
                  "country": "FOO_ADDRESS_COUNTRY",
                  "geocodedAddress": "FOO_GEOCODED_ADDRESS",
                  "id": 246,
                  "primary": true,
                  "street": "FOO_ADDRESS_STREET",
                  "streetNumber": "FOO_ADDRESS_STREET_NUMBER",
                  "user": Object {
                    "primary": true,
                  },
                  "zipCode": "FOO_ADDRESS_ZIP_CODE",
                },
              },
            },
            "pickup_address": "SHIPMENT_PICKUP_ADDRESS",
            "planned_eta": "2018-12-01T18:14:33z",
            "planned_etd": "2018-11-12T12:37:08z",
            "planned_origin_drop_off_date": "2018-12-01T22:14:33z",
            "planned_pickup_date": "2018-12-08T04:30:08z",
            "schedule_set": Array [
              Object {
                "hub_route_key": "SHIPMENT_SCHEDULE_SET_HUB_ROUTE_KEY",
              },
            ],
            "schedules_charges": Object {
              "AIR_HUB_ROUTE_KEY": Object {
                "total": 200,
              },
              "OCEAN_HUB_ROUTE_KEY": Object {
                "total": 40,
              },
              "RAIL_HUB_ROUTE_KEY": Object {
                "total": 125,
              },
              "TRUCK_HUB_ROUTE_KEY": Object {
                "total": 75,
              },
            },
            "selected_offer": Object {
              "cargo": Object {},
              "customs": Object {
                "hasUnknown": false,
                "val": 12,
              },
              "insurance": Object {
                "val": 5,
              },
              "total": Object {
                "value": 87,
              },
            },
            "service_level": "standard",
            "status": "finished",
            "total_goods_value": Object {
              "currency": "USD",
              "value": 150000,
            },
            "total_price": Object {
              "currency": "USD",
              "value": 137550,
            },
            "trucking": Object {
              "has_on_carriage": false,
              "has_pre_carriage": false,
              "on_carriage": Object {
                "trucking_time_in_seconds": 28,
              },
              "pre_carriage": Object {
                "trucking_time_in_seconds": 55,
              },
            },
            "updated_at": "2018-11-01T18:14:33z",
          },
        ]
      }
      t={[Function]}
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
      title="Related Shipments"
      userView={true}
    />
  </div>
  <div
    className="layout-row flex-100 layout-wrap layout-align-start-center"
  >
    <div
      className="flex-100 layout-row layout-align-space-between-center"
    >
      <div
        className="flex-100 layout-align-start-center greyBg"
      >
        <span>
          <b>
            Locations
          </b>
        </span>
      </div>
    </div>
    <AdminAddressTile
      address={[Function]}
      client={
        Object {
          "company_name": "FOO_COMPANY_NAME",
          "email": "FOO_EMAIL@mehr.de",
          "first_name": "FOO_FIRST_NAME",
          "last_name": "FOO_LAST_NAME",
          "primary": 2,
        }
      }
      key="UUID_MOCK_KEY_0"
      showDelete={false}
      t={[Function]}
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
    />
  </div>
</div>
`;

exports[`state.editBool is true 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-start-start extra_padding"
>
  <div
    className="flex-100 layout-row layout-align-start-stretch username_title"
  >
    <span
      className="layout-row flex-none layout-align-start-center card_padding_right"
    >
      <i
        className="fa fa-user clip bigProfile"
        style={
          Object {
            "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
          }
        }
      />
    </span>
    <div
      className="layout-align-start-center layout-row flex-70"
    >
      <h1
        className="flex-none layout-row cli"
      >
        FOO_FIRST_NAME
         
        FOO_LAST_NAME
      </h1>
    </div>
  </div>
  <div
    className="layout-row flex-100 layout-wrap layout-align-start-center margin_bottom"
  >
    <GreyBox
      borderStyle=""
      content={
        <div
          className="layout-row flex-100"
        >
          <UntranslatedEditProfileBox
            close={[Function]}
            handleChange={[Function]}
            onSave={[Function]}
            style={
              Object {
                "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
              }
            }
            t={[Function]}
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
            user={Object {}}
          />
        </div>
      }
      contentClassName="layout-row flex"
      flex={0}
      flexGtLg={0}
      flexMd={0}
      fullWidth={false}
      isBox={false}
      onClick={null}
      padding={false}
      style={Object {}}
      title=""
      titleAction={false}
      wrapperClassName="flex-gt-sm-66 flex-100 layout-row layout-align-start-center "
    />
  </div>
  <div
    className="layout-row flex-100 layout-wrap layout-align-start-center"
  >
    <AdminSearchableShipments
      dispatches={
        Object {
          "getContact": [Function],
          "goBack": [Function],
        }
      }
      handleClick={null}
      hubs={
        Array [
          Object {
            "address": Object {
              "city": "FOO_ADDRESS_CITY",
              "country": "FOO_ADDRESS_COUNTRY",
              "geocodedAddress": "FOO_GEOCODED_ADDRESS",
              "id": 246,
              "primary": true,
              "street": "FOO_ADDRESS_STREET",
              "streetNumber": "FOO_ADDRESS_STREET_NUMBER",
              "user": Object {
                "primary": true,
              },
              "zipCode": "FOO_ADDRESS_ZIP_CODE",
            },
            "country": "DE",
            "locode": "DEHAM",
            "name": "FOO_HUB_NAME",
            "nexusName": "Hamburg",
          },
        ]
      }
      limit={5}
      seeAll={false}
      shipments={
        Array [
          Object {
            "booking_placed_at": "2018-11-01T11:14:33z",
            "cargo_count": 2,
            "cargo_items_attributes": Array [],
            "cargo_notes": "SHIPMENT_CARGO_NOTES",
            "cargo_units": Array [
              Object {
                "height": 67,
                "length": 63,
                "quantity": 2,
                "width": 107,
              },
            ],
            "clientName": "FOO_FIRST_NAME FOO_LAST_NAME",
            "companyName": "FOO_COMPANY_NAME",
            "containers_attributes": Array [],
            "delivery_address": "SHIPMENT_DELIVERY_ADDRESS",
            "destination": Object {
              "fullAddress": "SHIPMENT_DESTINATION_FULL_ADDRESS",
            },
            "destination_hub": Object {
              "name": "SHIPMENT_DESTINATION_HUB",
              "startHub": Object {
                "address": Object {},
              },
            },
            "direction": "import",
            "eori": 1234,
            "has_on_carriage": false,
            "has_pre_carriage": false,
            "id": 654,
            "imc_reference": "SHIPMENT_IMC_REFERENCE",
            "incoterm": "SHIPMENT_INCOTERM",
            "incoterm_text": "SHIPMENT_INCOTERM_TEXT",
            "load_type": "cargo_item",
            "notes": "SHIPMENT_NOTES",
            "origin": Object {
              "fullAddress": "SHIPMENT_ORIGIN_FULL_ADDRESS",
            },
            "origin_hub": Object {
              "name": "SHIPMENT_ORIGIN_HUB",
              "startHub": Object {
                "address": Object {
                  "city": "FOO_ADDRESS_CITY",
                  "country": "FOO_ADDRESS_COUNTRY",
                  "geocodedAddress": "FOO_GEOCODED_ADDRESS",
                  "id": 246,
                  "primary": true,
                  "street": "FOO_ADDRESS_STREET",
                  "streetNumber": "FOO_ADDRESS_STREET_NUMBER",
                  "user": Object {
                    "primary": true,
                  },
                  "zipCode": "FOO_ADDRESS_ZIP_CODE",
                },
              },
            },
            "pickup_address": "SHIPMENT_PICKUP_ADDRESS",
            "planned_eta": "2018-12-01T18:14:33z",
            "planned_etd": "2018-11-12T12:37:08z",
            "planned_origin_drop_off_date": "2018-12-01T22:14:33z",
            "planned_pickup_date": "2018-12-08T04:30:08z",
            "schedule_set": Array [
              Object {
                "hub_route_key": "SHIPMENT_SCHEDULE_SET_HUB_ROUTE_KEY",
              },
            ],
            "schedules_charges": Object {
              "AIR_HUB_ROUTE_KEY": Object {
                "total": 200,
              },
              "OCEAN_HUB_ROUTE_KEY": Object {
                "total": 40,
              },
              "RAIL_HUB_ROUTE_KEY": Object {
                "total": 125,
              },
              "TRUCK_HUB_ROUTE_KEY": Object {
                "total": 75,
              },
            },
            "selected_offer": Object {
              "cargo": Object {},
              "customs": Object {
                "hasUnknown": false,
                "val": 12,
              },
              "insurance": Object {
                "val": 5,
              },
              "total": Object {
                "value": 87,
              },
            },
            "service_level": "standard",
            "status": "finished",
            "total_goods_value": Object {
              "currency": "USD",
              "value": 150000,
            },
            "total_price": Object {
              "currency": "USD",
              "value": 137550,
            },
            "trucking": Object {
              "has_on_carriage": false,
              "has_pre_carriage": false,
              "on_carriage": Object {
                "trucking_time_in_seconds": 28,
              },
              "pre_carriage": Object {
                "trucking_time_in_seconds": 55,
              },
            },
            "updated_at": "2018-11-01T18:14:33z",
          },
        ]
      }
      t={[Function]}
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
      title="Related Shipments"
      userView={true}
    />
  </div>
  <div
    className="layout-row flex-100 layout-wrap layout-align-start-center"
  >
    <div
      className="flex-100 layout-row layout-align-space-between-center"
    >
      <div
        className="flex-100 layout-align-start-center greyBg"
      >
        <span>
          <b>
            Locations
          </b>
        </span>
      </div>
    </div>
    <AdminAddressTile
      address={[Function]}
      client={
        Object {
          "company_name": "FOO_COMPANY_NAME",
          "email": "FOO_EMAIL@mehr.de",
          "first_name": "FOO_FIRST_NAME",
          "last_name": "FOO_LAST_NAME",
          "primary": 2,
        }
      }
      key="UUID_MOCK_KEY_2"
      showDelete={false}
      t={[Function]}
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
    />
  </div>
</div>
`;
